| Summary: | ASTERISK-19290: Voicemailmain password not recognized from Aastra 480i phone in versions past 10.0.1 | ||||||||
| Reporter: | Ira Emus (extrasensory) | Labels: | |||||||
| Date Opened: | 2012-02-01 15:44:34.000-0600 | Date Closed: | 2012-02-09 10:39:19.000-0600 | ||||||
| Priority: | Minor | Regression? | Yes | ||||||
| Status: | Closed/Complete | Components: | Applications/app_voicemail Channels/chan_sip/General | ||||||
| Versions: | 10.1.0 | Frequency of Occurrence | Constant | ||||||
| Related Issues: |
| ||||||||
| Environment: | Centos 5 updated | Attachments: | ( 0) myDebugLogFails.txt ( 1) myDebugLogWorks.txt | ||||||
| Description: | On 10.1.0 and trunk, I can't successfully enter the password for any mailbox in voicemailmain on my Aastra 480i phones. All four version work with a Snom cordless SIP phone. In 10.0.0 and 10.0.1 the Aastra works perfectly. | ||||||||
| Comments: | By: Matt Jordan (mjordan) 2012-02-01 15:48:00.058-0600 We require a complete debug log to help triage the issue. This document will provide instructions on how to collect debugging logs from an Asterisk machine for the purpose of helping bug marshals troubleshoot an issue: https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Ira Emus (extrasensory) 2012-02-02 22:38:21.213-0600 One version with 10.1.0 called fail and one version with 10.0.1 called works By: Richard Mudgett (rmudgett) 2012-02-03 10:47:37.507-0600 Please send the issue back when done entering feedback. Otherwise, the issue may get ignored until all feedback is provided. By: Ira Emus (extrasensory) 2012-02-03 11:32:39.639-0600 I'm confused, I was asked for logs and provided logs. if you need something else, just ask. I'm out of my element as I've no idea how to help or what to do. I'm willing to help in any way I can and I can duplicate the problem consistantly so I can get whatever you want. Did I get the logs wrong or something? Ira By: Matt Jordan (mjordan) 2012-02-08 14:14:57.928-0600 The logs are fine and this should be sufficient info to fix the problem. Richard was simply noting that you have to use the "Enter Feedback" option for the workflow to send it back to a state where people will find it using the various issue filters. By: Matt Jordan (mjordan) 2012-02-09 11:10:25.172-0600 Ira: I've reproduced your issue and put a fix for it in the current branches for 1.8, 10, and trunk. We'll release a new 1.8.9.x and 10.1.x release for this and another regression found by Richard. By: Ira Emus (extrasensory) 2012-02-09 12:11:28.702-0600 Thans so much. I'll go back to running trunk again and let you know if I see anything else. Ira | ||||||||